--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -785,7 +785,7 @@
   "pli-tv-kd2:26.3.4": "Today is the observance day, the fifteenth. ",
   "pli-tv-kd2:26.3.5": "If it seems appropriate to the venerables, we should do the observance-day procedure by declaring purity to one another.’ ",
   "pli-tv-kd2:26.3.6": "The most senior monk should put his upper robe over one shoulder, squat on his heels, raise his joined palms, and say to the other monks: ",
-  "pli-tv-kd2:26.3.7": "ʻI’m pure; ",
+  "pli-tv-kd2:26.3.7": "ʻI’m pure. ",
   "pli-tv-kd2:26.3.8": "please remember me as pure.’ ",
   "pli-tv-kd2:26.3.9": "And he should repeat this two more times. ",
   "pli-tv-kd2:26.4.1": "A junior monk should put his upper robe over one shoulder, squat on his heels, raise his joined palms, and say to the other monks: ",
