--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -788,7 +788,7 @@
   "pli-tv-kd2:26.3.7": "ʻI’m pure. ",
   "pli-tv-kd2:26.3.8": "Please remember me as pure.’ ",
   "pli-tv-kd2:26.3.9": "And he should repeat this two more times. ",
-  "pli-tv-kd2:26.4.1": "A junior monk should put his upper robe over one shoulder, squat on his heels, raise his joined palms, and say to the other monks: ",
+  "pli-tv-kd2:26.4.1": "Each junior monk should put his upper robe over one shoulder, squat on his heels, raise his joined palms, and say to the other monks: ",
   "pli-tv-kd2:26.4.2": "ʻI’m pure, Venerable; ",
   "pli-tv-kd2:26.4.3": "please remember me as pure.’ ",
   "pli-tv-kd2:26.4.4": "And he should repeat this two more times.” ",
