--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -796,7 +796,7 @@
   "pli-tv-kd2:26.5.2": "They thought, ",
   "pli-tv-kd2:26.5.3": "“The Buddha has instructed that the Monastic Code should be recited when there are four and that the observance-day procedure should be done by declaring purity when there are three. ",
   "pli-tv-kd2:26.5.4": "But there’s only two of us. ",
-  "pli-tv-kd2:26.5.5": "How should we do the observance-day procedure?” ",
+  "pli-tv-kd2:26.5.5": "So how should we do the observance-day procedure?” ",
   "pli-tv-kd2:26.5.7": "“When there are two of you, you should do the observance-day procedure by declaring your purity. ",
   "pli-tv-kd2:26.6.1": "And this is how it should be done. ",
   "pli-tv-kd2:26.6.2": "The most senior monk should put his upper robe over one shoulder, squat on his heels, raise his joined palms, and say to the junior monk: ",
