--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -801,7 +801,7 @@
   "pli-tv-kd2:26.6.1": "And this is how it should be done. ",
   "pli-tv-kd2:26.6.2": "The senior monk should put his upper robe over one shoulder, squat on his heels, raise his joined palms, and say to the junior monk: ",
   "pli-tv-kd2:26.6.3": "ʻI’m pure. ",
-  "pli-tv-kd2:26.6.4": "please remember me as pure.’ ",
+  "pli-tv-kd2:26.6.4": "Please remember me as pure.’ ",
   "pli-tv-kd2:26.6.5": "And he should repeat this two more times. ",
   "pli-tv-kd2:26.7.1": "The junior monk should put his upper robe over one shoulder, squat on his heels, raise his joined palms, and say to the senior monk: ",
   "pli-tv-kd2:26.7.2": "ʻI’m pure, Venerable; ",
