--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -811,7 +811,7 @@
   "pli-tv-kd2:26.8.2": "He thought, ",
   "pli-tv-kd2:26.8.3": "“The Buddha has instructed that the Monastic Code should be recited when there are four and that the observance-day procedure should be done by declaring purity when there are two or three. ",
   "pli-tv-kd2:26.8.4": "But I’m here by myself. ",
-  "pli-tv-kd2:26.8.5": "How should I do the observance-day procedure?” ",
+  "pli-tv-kd2:26.8.5": "So how should I do the observance-day procedure?” ",
   "pli-tv-kd2:26.9.1": "“On the observance day it may happen that a monk is staying by himself in a certain monastery. ",
   "pli-tv-kd2:26.9.2": "That monk should sweep whatever place the monks normally go to: whether the assembly hall, under a roof-cover, or at the foot of a tree. He should set out water for drinking and water for washing, should prepare a seat, light a lamp, and sit down. ",
   "pli-tv-kd2:26.9.3": "If other monks come, he should do the observance-day procedure with them. ",
