--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -813,7 +813,7 @@
   "pli-tv-kd2:26.8.4": "But I’m here by myself. ",
   "pli-tv-kd2:26.8.5": "So how should I do the observance-day procedure?” ",
   "pli-tv-kd2:26.9.1": "“On the observance day it may be that a monk is staying by himself in a certain monastery. ",
-  "pli-tv-kd2:26.9.2": "That monk should sweep whatever place the monks normally go to: whether the assembly hall, under a roof-cover, or at the foot of a tree. He should set out water for drinking and water for washing, should prepare a seat, light a lamp, and sit down. ",
+  "pli-tv-kd2:26.9.2": "That monk should sweep the place where the monks normally go: whether the assembly hall, under a roof-cover, or at the foot of a tree. He should set out water for drinking and water for washing; he should prepare a seat, light a lamp, and sit down. ",
   "pli-tv-kd2:26.9.3": "If other monks come, he should do the observance-day procedure with them. ",
   "pli-tv-kd2:26.9.4": "If not, he should determine: ʻToday is my observance day.’ ",
   "pli-tv-kd2:26.9.5": "If he doesn’t make a determination, he commits an offense of wrong conduct. ",
