--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -822,7 +822,7 @@
   "pli-tv-kd2:26.10.3": "Wherever three monks are staying together, two shouldn’t do the observance-day procedure by declaring purity while one sends his purity. ",
   "pli-tv-kd2:26.10.4": "If you do declare purity, you commit an offense of wrong conduct. ",
   "pli-tv-kd2:26.10.5": "Wherever two monks are staying together, one shouldn’t makes a determination while one sends his purity. ",
-  "pli-tv-kd2:26.10.6": "If you do, you commit an offense of wrong conduct.” ",
+  "pli-tv-kd2:26.10.6": "If you make a determination, you commit an offense of wrong conduct.” ",
   "pli-tv-kd2:27.1.0": "25. The process for making amends for an offense ",
   "pli-tv-kd2:27.1.1": "At one time on the observance day, a certain monk had committed an offense. ",
   "pli-tv-kd2:27.1.2": "He thought, ",
