--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -818,7 +818,7 @@
   "pli-tv-kd2:26.9.4": "If not, he should determine: ʻToday is my observance day.’ ",
   "pli-tv-kd2:26.9.5": "If he doesn’t make a determination, he commits an offense of wrong conduct. ",
   "pli-tv-kd2:26.10.1": "“Wherever four monks are staying together, three shouldn’t recite the Monastic Code while one sends his purity. ",
-  "pli-tv-kd2:26.10.2": "If you do recite it, you commit an offense of wrong conduct. ",
+  "pli-tv-kd2:26.10.2": "If you do recite the Monastic Code, you commit an offense of wrong conduct. ",
   "pli-tv-kd2:26.10.3": "Wherever three monks are staying together, two shouldn’t do the observance-day procedure by declaring purity while one sends his purity. ",
   "pli-tv-kd2:26.10.4": "If you do declare purity, you commit an offense of wrong conduct. ",
   "pli-tv-kd2:26.10.5": "Wherever two monks are staying together, one shouldn’t makes a determination while one sends his purity. ",
