--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -238,7 +238,7 @@
   "pli-tv-kd4:5.1.6": "So how should we do the invitation procedure?” ",
   "pli-tv-kd4:5.1.7": "They told the Buddha. ",
   "pli-tv-kd4:5.1.8": "“When there are five of you, you should do the invitation procedure in the Sangha.” ",
-  "pli-tv-kd4:5.2.1": "At one time on the invitation day there were four monks staying in a certain monastery. ",
+  "pli-tv-kd4:5.2.1": "At one time on the invitation day, there were four monks staying in a certain monastery. ",
   "pli-tv-kd4:5.2.2": "They thought, ",
   "pli-tv-kd4:5.2.3": "“The Buddha has instructed that the invitation procedure should be done in the Sangha when there are five monks. ",
   "pli-tv-kd4:5.2.4": "But there’s only four of us. ",
