--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -230,7 +230,7 @@
   "pli-tv-kd4:4.3.14": "If not, you should not do the invitation procedure with an incomplete Sangha. ",
   "pli-tv-kd4:4.3.15": "If you do, you commit an offense of wrong conduct.” ",
   "pli-tv-kd4:5.1.0": "5. Various kinds of invitation procedures for the Sangha, etc. ",
-  "pli-tv-kd4:5.1.1": "At one time on the invitation day there were five monks staying in a certain monastery. ",
+  "pli-tv-kd4:5.1.1": "At one time on the invitation day, there were five monks staying in a certain monastery. ",
   "pli-tv-kd4:5.1.2": "They thought, ",
   "pli-tv-kd4:5.1.3": "“The Buddha has laid down a rule ",
   "pli-tv-kd4:5.1.4": "that the invitation procedure should be done with a sangha. ",
