--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -257,7 +257,7 @@
   "pli-tv-kd4:5.3.11": "For the third time, I invite you to correct me concerning what you have seen, what you have heard, and what you suspect. ",
   "pli-tv-kd4:5.3.12": "Please correct me, Venerables, out of compassion. ",
   "pli-tv-kd4:5.3.13": "If I see a fault, I will make amends.’ ",
-  "pli-tv-kd4:5.3.14": "A junior monk should put his upper robe over one shoulder, squat on his heels, raise his joined palms, and say to the other monks: ",
+  "pli-tv-kd4:5.3.14": "Each junior monk should put his upper robe over one shoulder, squat on his heels, raise his joined palms, and say to the other monks: ",
   "pli-tv-kd4:5.3.15": "ʻI invite the venerables to correct me concerning what you have seen, what you have heard, and what you suspect. ",
   "pli-tv-kd4:5.3.16": "Please correct me, Venerables, out of compassion. ",
   "pli-tv-kd4:5.3.17": "If I see a fault, I will make amends. ",
