--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -265,7 +265,7 @@
   "pli-tv-kd4:5.3.19": "For the third time I invite the venerables to correct me concerning what you have seen, what you have heard, and what you suspect. ",
   "pli-tv-kd4:5.3.20": "Please correct me, Venerables, out of compassion. ",
   "pli-tv-kd4:5.3.21": "If I see a fault, I will make amends.’” ",
-  "pli-tv-kd4:5.4.1": "At one time on the invitation day there were three monks staying in a certain monastery. ",
+  "pli-tv-kd4:5.4.1": "At one time on the invitation day, there were three monks staying in a certain monastery. ",
   "pli-tv-kd4:5.4.2": "They thought, ",
   "pli-tv-kd4:5.4.3": "“The Buddha has instructed that the invitation procedure should be done in the Sangha when there are five monks and with one another when there are four. ",
   "pli-tv-kd4:5.4.4": "But there’s only three of us. ",
