--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -284,7 +284,7 @@
   "pli-tv-kd4:5.4.18": "For the third time, I invite the you correct me concerning what you have seen, what you have heard, and what you suspect. ",
   "pli-tv-kd4:5.4.19": "Please correct me, Venerables, out of compassion. ",
   "pli-tv-kd4:5.4.20": "If I see a fault, I will make amends.’ ",
-  "pli-tv-kd4:5.4.21": "A junior monk should put his upper robe over one shoulder, squat on his heels, raise his joined palms, and say to the other monks: ",
+  "pli-tv-kd4:5.4.21": "Each junior monk should put his upper robe over one shoulder, squat on his heels, raise his joined palms, and say to the other monks: ",
   "pli-tv-kd4:5.4.22": "ʻI invite the venerables to correct me concerning what you have seen, what you have heard, and what you suspect. ",
   "pli-tv-kd4:5.4.23": "Please correct me, Venerables, out of compassion. ",
   "pli-tv-kd4:5.4.24": "If I see a fault, I will make amends. ",
