--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -292,7 +292,7 @@
   "pli-tv-kd4:5.4.26": "For the third time I invite the venerables to correct me concerning what you have seen, what you have heard, and what you suspect. ",
   "pli-tv-kd4:5.4.27": "Please correct me, Venerables, out of compassion. ",
   "pli-tv-kd4:5.4.28": "If I see a fault, I will make amends.’” ",
-  "pli-tv-kd4:5.5.1": "At one time on the invitation day there were two monks staying in a certain monastery. ",
+  "pli-tv-kd4:5.5.1": "At one time on the invitation day, there were two monks staying in a certain monastery. ",
   "pli-tv-kd4:5.5.2": "They thought, ",
   "pli-tv-kd4:5.5.3": "“The Buddha has instructed that the invitation procedure should be done in the Sangha when there are five monks and with one another when there are three or four. ",
   "pli-tv-kd4:5.5.4": "But there’s only two of us. ",
