--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -315,7 +315,7 @@
   "pli-tv-kd4:5.6.15": "For the third time I invite the venerable to correct me concerning what you have seen, what you have heard, and what you suspect. ",
   "pli-tv-kd4:5.6.16": "Please correct me, Venerable, out of compassion. ",
   "pli-tv-kd4:5.6.17": "If I see a fault, I will make amends.’” ",
-  "pli-tv-kd4:5.7.1": "At one time on the invitation day a monk was staying in a certain monastery by himself. ",
+  "pli-tv-kd4:5.7.1": "At one time on the invitation day, a monk was staying in a certain monastery by himself. ",
   "pli-tv-kd4:5.7.2": "He thought, ",
   "pli-tv-kd4:5.7.3": "“The Buddha has instructed that the invitation procedure should be done in the Sangha when there are five monks and with one another when there are two, three, or four. ",
   "pli-tv-kd4:5.7.4": "But I’m here by myself. ",
