--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -328,7 +328,7 @@
   "pli-tv-kd4:5.9.1": "Wherever five monks are staying together, four shouldn’t do the invitation procedure in the Sangha while bringing the invitation of one. ",
   "pli-tv-kd4:5.9.2": "If you do the invitation in the Sangha, you commit an offense of wrong conduct. ",
   "pli-tv-kd4:5.9.3": "Wherever four monks are staying together, three shouldn’t do the invitation procedure with one another while bringing the invitation of one. ",
-  "pli-tv-kd4:5.9.4": "If you do it in this way, you commit an offense of wrong conduct. ",
+  "pli-tv-kd4:5.9.4": "If you do the invitation in this way, you commit an offense of wrong conduct. ",
   "pli-tv-kd4:5.9.5": "Wherever three monks are staying together, two shouldn’t do the invitation procedure with each other while bringing the invitation of one. ",
   "pli-tv-kd4:5.9.6": "If you do it in this way, you commit an offense of wrong conduct. ",
   "pli-tv-kd4:5.9.7": "Wherever two monks are staying together, one shouldn’t make a determination while bringing the invitation of one. ",
