--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -456,5 +456,6 @@
   "dn34:2.1.8": "‘Venerable, why it this as it is?",
   "dn34:2.1.9": "What is the meaning of this?’",
   "dn34:2.1.10": "That Venerable clarifies what was unclear, elucidates what was obscure, and through various means dispels his doubt regarding dubious things.",
-  "dn34:2.1.11": "This is the second cause, the second support that leads to acquiring the unacquired discernment that is foundational to one living the holy life, and to furthering, increasing, cultivating, and fulfilling that which has been acquired."
+  "dn34:2.1.11": "This is the second cause, the second support that leads to acquiring the unacquired discernment that is foundational to one living the holy life, and to furthering, increasing, cultivating, and fulfilling that which has been acquired.",
+  "dn34:2.1.12": "Further, having heard the teaching, he strives by twofold seclusion—physical seclusion and mental seclusion."
 }
