--- a/translation/en/kovilo/sutta/an/an4/an4.22_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/an/an4/an4.22_translation-en-kovilo.json
@@ -20,7 +20,7 @@
   "an4.22:3.3": "then that person is considered a ‘discerning elder.’ ",
   "an4.22:4.1": "There are these four qualities that make one an elder.",
   "an4.22:4.2": "What four?",
-  "an4.22:4.3": "Here, a monk is virtuous. He dwells restrained by the restraint of the monk's rules and is skilled in his behavior and he chooses his environment wisely. He sees danger in the slightest faults and, having taken them on, he trains himself according to the training precepts.",
+  "an4.22:4.3": "Here, a monk is virtuous. He dwells restrained by the restraint of the monk's rules and is skilled in his behavior and chooses his environment wisely. He sees danger in the slightest faults and, having taken them on, he trains himself according to the training precepts.",
   "an4.22:4.4": "They have studied much and remembered what they've heard of those teachings—beautiful in the beginning, middle, and end—which declare the utterly complete and pure holy life with its essentials and features. They have studied, memorized, verbally recited, intellectually examined, and, with vision, have thoroughly realized the point of these sorts of teachings.",
   "an4.22:4.5": "At will and without difficulty, they easily gain the four meditative immersions which exemplify the mastered mind and are pleasant abidings here and now.",
   "an4.22:4.6": "With the exhaustion of outflows, they dwell having seen personally and attained in this present life with direct knowledge, by themselves the freedoms of mind and discernment that are free of outflow.",
