--- a/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
@@ -25,5 +25,6 @@
   "mn16:8.1": "Quali sono le cinque tenaglie emotive che non ha tagliato?",
   "mn16:8.2": "Primo, un mendicante non è libero da avidità, desiderio, apprezzamento, sete, passione, e voglia per i piaceri dei sensi.",
   "mn16:8.3": "Essendo così, la sua mente non è inclinata verso l'entusiasmo, impegno, persistenza, e lavoro.",
-  "mn16:8.4": "Questo è il primo tipo di tenaglia emotiva che non ha tagliato."
+  "mn16:8.4": "Questo è il primo tipo di tenaglia emotiva che non ha tagliato.",
+  "mn16:9.1": "Inoltre, un mendicante non è libero da avidità per il corpo …"
 }
