--- a/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
@@ -28,5 +28,6 @@
   "mn16:8.4": "Questo è il primo tipo di tenaglia emotiva che non ha tagliato.",
   "mn16:9.1": "Inoltre, un mendicante non è libero da avidità per il corpo …",
   "mn16:9.2": "Questo è il secondo tipo di tenaglia emotiva.",
-  "mn16:10.1": "Inoltre, un mendicante non è libero da avidità per la forma …"
+  "mn16:10.1": "Inoltre, un mendicante non è libero da avidità per la forma …",
+  "mn16:10.2": "Questo è il terzo tipo di tenaglia emotiva."
 }
