--- a/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
@@ -27,7 +27,7 @@
   "mn16:8.3": "Essendo così, la sua mente non è inclinata verso l'entusiasmo, impegno, persistenza, e lavoro.",
   "mn16:8.4": "Questa è la prima tenaglia emotiva che non ha tagliato.",
   "mn16:9.1": "Inoltre, un mendicante non è libero da avidità per il corpo …",
-  "mn16:9.2": "Questo è il secondo tipo di tenaglia emotiva.",
+  "mn16:9.2": "Questa è la seconda tenaglia emotiva.",
   "mn16:10.1": "Inoltre, un mendicante non è libero da avidità per la forma …",
   "mn16:10.2": "Questo è il terzo tipo di tenaglia emotiva.",
   "mn16:11.1": "Mangia quanto vuole finché ha la pancia piena, indulge nei piaceri del dormire, sdraiarsi, e sonnecchiare …",
