--- a/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
@@ -29,7 +29,7 @@
   "mn16:9.1": "Inoltre, un mendicante non è libero da avidità per il corpo …",
   "mn16:9.2": "Questa è la seconda tenaglia emotiva.",
   "mn16:10.1": "Inoltre, un mendicante non è libero da avidità per la forma …",
-  "mn16:10.2": "Questo è il terzo tipo di tenaglia emotiva.",
+  "mn16:10.2": "Questa è la terza tenaglia emotiva.",
   "mn16:11.1": "Mangia quanto vuole finché ha la pancia piena, indulge nei piaceri del dormire, sdraiarsi, e sonnecchiare …",
   "mn16:11.3": "Questo è il quarto tipo di tenaglia emotiva."
 }
