--- a/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
@@ -35,5 +35,6 @@
   "mn16:12.1": "Conduce la vita spirituale sperando di rinascere in una delle classi delle divinità, pensando: ‘Che attraverso questo precetto o osservanza o mortificazione o vita spirituale diventi una delle divinità!’",
   "mn16:12.2": "Essendo così, la sua mente non è inclinata verso l'entusiasmo, impegno, persistenza, e lavoro.",
   "mn16:12.3": "Questa è la quinta tenaglia emotiva che non ha tagliato.",
-  "mn16:12.4": "Queste sono le cinque tenaglie emotive che non ha tagliato."
+  "mn16:12.4": "Queste sono le cinque tenaglie emotive che non ha tagliato.",
+  "mn16:13.1": "Quando un mendicante non ha abbandonato questi cinque tipi di aridità emotiva e tagliato queste cinque tenaglie emotive, non è possibile che raggiunga crescita, miglioramento, o maturità in questo insegnamento ed addestramento."
 }
