--- a/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
@@ -38,5 +38,6 @@
   "mn16:12.4": "Queste sono le cinque tenaglie emotive che non ha tagliato.",
   "mn16:13.1": "Quando un mendicante non ha abbandonato questi cinque tipi di aridità emotiva e tagliato queste cinque tenaglie emotive, non è possibile che raggiunga crescita, miglioramento, o maturità in questo insegnamento ed addestramento.",
   "mn16:14.1": "Una volta che un mendicante ha abbandonato questi cinque tipi di aridità emotiva e tagliato queste cinque tenaglie emotive, è possibile che raggiunga crescita, miglioramento, e maturità in questo insegnamento ed addestramento.",
-  "mn16:15.1": "Quali sono i cinque tipi di aridità emotiva che ha abbandonato?"
+  "mn16:15.1": "Quali sono i cinque tipi di aridità emotiva che ha abbandonato?",
+  "mn16:15.2": "Primo, un mendicante non ha dei dubbi riguardo il Maestro. Non è incerto, indeciso, e senza fiducia."
 }
