--- a/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
@@ -40,5 +40,6 @@
   "mn16:14.1": "Una volta che un mendicante ha abbandonato questi cinque tipi di aridità emotiva e tagliato queste cinque tenaglie emotive, è possibile che raggiunga crescita, miglioramento, e maturità in questo insegnamento ed addestramento.",
   "mn16:15.1": "Quali sono i cinque tipi di aridità emotiva che ha abbandonato?",
   "mn16:15.2": "Primo, un mendicante non ha dei dubbi riguardo il Maestro. Non è incerto, indeciso, o senza fiducia.",
-  "mn16:15.3": "Essendo così, la sua mente è inclinata verso l'entusiasmo, impegno, persistenza, e lavoro."
+  "mn16:15.3": "Essendo così, la sua mente è inclinata verso l'entusiasmo, impegno, persistenza, e lavoro.",
+  "mn16:15.4": "Questo è il primo tipo di aridità emotiva che ha abbandonato."
 }
