--- a/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
@@ -42,5 +42,6 @@
   "mn16:15.2": "Primo, un mendicante non ha dei dubbi riguardo il Maestro. Non è incerto, indeciso, o senza fiducia.",
   "mn16:15.3": "Essendo così, la sua mente è inclinata verso l'entusiasmo, impegno, persistenza, e lavoro.",
   "mn16:15.4": "Questo è il primo tipo di aridità emotiva che ha abbandonato.",
-  "mn16:16.1": "Inoltre, un mendicante non ha dubbi riguardo l'insegnamento …"
+  "mn16:16.1": "Inoltre, un mendicante non ha dubbi riguardo l'insegnamento …",
+  "mn16:17.1": "Non ha dubbi riguardo la comunità …"
 }
