--- a/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
@@ -43,5 +43,6 @@
   "mn16:15.3": "Essendo così, la sua mente è inclinata verso l'entusiasmo, impegno, persistenza, e lavoro.",
   "mn16:15.4": "Questo è il primo tipo di aridità emotiva che ha abbandonato.",
   "mn16:16.1": "Inoltre, un mendicante non ha dubbi riguardo l'insegnamento …",
-  "mn16:17.1": "Non ha dubbi riguardo la comunità …"
+  "mn16:17.1": "Non ha dubbi riguardo la comunità …",
+  "mn16:18.1": "Non ha dubbi riguardo l'addestramento …"
 }
