--- a/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
@@ -44,5 +44,6 @@
   "mn16:15.4": "Questo è il primo tipo di aridità emotiva che ha abbandonato.",
   "mn16:16.1": "Inoltre, un mendicante non ha dubbi riguardo l'insegnamento …",
   "mn16:17.1": "Non ha dubbi riguardo la comunità …",
-  "mn16:18.1": "Non ha dubbi riguardo l'addestramento …"
+  "mn16:18.1": "Non ha dubbi riguardo l'addestramento …",
+  "mn16:19.1": "Non è arrabbiato ed agitato nei confronti dei propri compagni spirituali, risentito e chiuso."
 }
