--- a/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
@@ -50,5 +50,6 @@
   "mn16:19.3": "Questo è il quinto tipo di aridità emotiva che ha abbandonato.",
   "mn16:19.4": "Questi sono i cinque tipi di aridità emotiva che ha abbandonato.",
   "mn16:20.1": "Quali sono le cinque tenaglie emotive che ha tagliato?",
-  "mn16:20.2": "Primo, un mendicante è libero da avidità, desiderio, apprezzamento, sete, passione, e voglia per i piaceri dei sensi."
+  "mn16:20.2": "Primo, un mendicante è libero da avidità, desiderio, apprezzamento, sete, passione, e voglia per i piaceri dei sensi.",
+  "mn16:20.3": "Essendo così, la sua mente è inclinata verso l'entusiasmo, impegno, persistenza, e lavoro."
 }
