--- a/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
@@ -53,5 +53,6 @@
   "mn16:20.2": "Primo, un mendicante è libero da avidità, desiderio, apprezzamento, sete, passione, e voglia per i piaceri dei sensi.",
   "mn16:20.3": "Essendo così, la sua mente è inclinata verso l'entusiasmo, impegno, persistenza, e lavoro.",
   "mn16:20.4": "Questa è la prima tenaglia emotiva che ha tagliato.",
-  "mn16:21.1": "Inoltre, un mendicante è libero da avidità per il corpo …"
+  "mn16:21.1": "Inoltre, un mendicante è libero da avidità per il corpo …",
+  "mn16:22.1": "È libero da avidità per la forma …"
 }
