--- a/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn16_translation-it-giovannizappa.json
@@ -30,7 +30,7 @@
   "mn16:9.2": "Questa è la seconda tenaglia emotiva.",
   "mn16:10.1": "Inoltre, un mendicante non è libero da avidità per la forma …",
   "mn16:10.2": "Questa è la terza tenaglia emotiva.",
-  "mn16:11.1": "Mangia quanto vuole finché ha la pancia piena, indulge nei piaceri del dormire, sdraiarsi, e sonnecchiare …",
+  "mn16:11.1": "Mangia quanto vuole finché ha la pancia piena, e poi indulge nei piaceri del dormire, sdraiarsi, e sonnecchiare …",
   "mn16:11.3": "Questa è la quarta tenaglia emotiva.",
   "mn16:12.1": "Conduce la vita spirituale sperando di rinascere in una delle classi delle divinità, pensando: ‘Che attraverso questo precetto o osservanza o mortificazione o vita spirituale diventi una delle divinità!’",
   "mn16:12.2": "Essendo così, la sua mente non è inclinata verso l'entusiasmo, impegno, persistenza, e lavoro.",
